// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddToListModal multiple works as input 1`] = `
<div
  className="modal-container "
>
  <div
    className="modal-backdrop"
    onClick={[Function]}
  />
  <div
    className="modal-window add-to-list--modal p-4"
  >
    <div
      className="top d-flex flex-row justify-content-start justify-content-sm-end"
    >
      <i
        className="material-icons material-icons-clear m-3 d-none d-sm-inline-block "
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        clear
      </i>
      <button
        className="m-3 d-inline-block d-sm-none
            btn Button Button__medium Button__link2 "
        data-cy=""
        disabled={false}
        onClick={[Function]}
      >
        
        <span>
          <i
            className="material-icons material-icons-chevron_left align-middle "
            onClick={[Function]}
          >
            chevron_left
          </i>
          <span
            className="align-middle"
          >
            Tilbage
          </span>
        </span>
        
      </button>
    </div>
    <div
      className="content"
    >
      <h1
        className=" Title Title__title4 Title__title4--transform-uppercase--weight-bold"
      >
        Gem i liste
      </h1>
      <div
        className="row"
      >
        <strong
          className="col-12"
        >
          Hvilken liste vil du gemme i?
        </strong>
      </div>
      <div
        className="row"
      >
        <div
          className="col-6"
        >
          <div
            className="list-overview"
          >
            <div>
              <input
                checked={false}
                id="radio-title1-0"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title1-0"
              >
                title1
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title2-1"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title2-1"
              >
                title2
              </label>
            </div>
            <hr />
            <div>
              <input
                checked={false}
                id="radio-title1-0"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                data-cy="add-to-list-modal-system-lists"
                htmlFor="radio-title1-0"
              >
                title1
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title2-1"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                data-cy="add-to-list-modal-system-lists"
                htmlFor="radio-title2-1"
              >
                title2
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title3-2"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                data-cy="add-to-list-modal-system-lists"
                htmlFor="radio-title3-2"
              >
                title3
              </label>
            </div>
          </div>
          <div
            className="add-list"
          >
            <form
              onSubmit={[Function]}
            >
              <input
                className=""
                name="add-list"
                onChange={[Function]}
                placeholder="Opret ny liste"
                type="text"
                value=""
              />
              <input
                className="add-list--btn text-center d-none"
                onClick={[Function]}
                type="button"
                value="×"
              />
            </form>
          </div>
        </div>
        <div
          className="col-6"
        >
          <p
            className="mt2"
          >
            Du er ved at gemme 2 bøger
          </p>
        </div>
      </div>
      <div
        className="modal-seperator mt-5 mb-4"
      />
      <div
        className="bottom d-flex flex-row justify-content-end align-items-center pt-1"
      >
        <a
          href={null}
          target="_blank"
        >
          <button
            className="mr-0 false
                btn Button Button__medium Button__quaternary "
            data-cy="modal-done-btn"
            disabled={false}
            onClick={[Function]}
          >
            
            <span>
              Ja tak, gem nu
            </span>
            
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddToListModal newly added list is selected 1`] = `
<div
  className="modal-container "
>
  <div
    className="modal-backdrop"
    onClick={[Function]}
  />
  <div
    className="modal-window add-to-list--modal p-4"
  >
    <div
      className="top d-flex flex-row justify-content-start justify-content-sm-end"
    >
      <i
        className="material-icons material-icons-clear m-3 d-none d-sm-inline-block "
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        clear
      </i>
      <button
        className="m-3 d-inline-block d-sm-none
            btn Button Button__medium Button__link2 "
        data-cy=""
        disabled={false}
        onClick={[Function]}
      >
        
        <span>
          <i
            className="material-icons material-icons-chevron_left align-middle "
            onClick={[Function]}
          >
            chevron_left
          </i>
          <span
            className="align-middle"
          >
            Tilbage
          </span>
        </span>
        
      </button>
    </div>
    <div
      className="content"
    >
      <h1
        className=" Title Title__title4 Title__title4--transform-uppercase--weight-bold"
      >
        Gem i liste
      </h1>
      <div
        className="row"
      >
        <strong
          className="col-12"
        >
          Hvilken liste vil du gemme i?
        </strong>
      </div>
      <div
        className="row"
      >
        <div
          className="col-6"
        >
          <div
            className="list-overview"
          >
            <div>
              <input
                checked={false}
                id="radio-title1-0"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title1-0"
              >
                title1
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title2-1"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title2-1"
              >
                title2
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title3-2"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title3-2"
              >
                title3
              </label>
            </div>
            <hr />
            <div>
              <input
                checked={false}
                id="radio-title1-0"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                data-cy="add-to-list-modal-system-lists"
                htmlFor="radio-title1-0"
              >
                title1
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title2-1"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                data-cy="add-to-list-modal-system-lists"
                htmlFor="radio-title2-1"
              >
                title2
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title3-2"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                data-cy="add-to-list-modal-system-lists"
                htmlFor="radio-title3-2"
              >
                title3
              </label>
            </div>
          </div>
          <div
            className="add-list"
          >
            <form
              onSubmit={[Function]}
            >
              <input
                className=""
                name="add-list"
                onChange={[Function]}
                placeholder="Opret ny liste"
                type="text"
                value=""
              />
              <input
                className="add-list--btn text-center d-none"
                onClick={[Function]}
                type="button"
                value="×"
              />
            </form>
          </div>
        </div>
        <div
          className="col-6"
        >
          <WorkItemSmall
            work={
              Object {
                "book": Object {
                  "creator": "some creator1",
                  "pid": "pid1",
                  "taxonomy_description": "some taxonomy_description1",
                  "title": "some title1",
                },
                "description": "some description1",
                "links": Object {
                  "cover": "/cover1",
                },
              }
            }
          />
          <textarea
            className="comment"
            onChange={[Function]}
            placeholder={
              <T
                component="list"
                name="bookCommentModal"
              />
            }
            value=""
          />
        </div>
      </div>
      <div
        className="modal-seperator mt-5 mb-4"
      />
      <div
        className="bottom d-flex flex-row justify-content-end align-items-center pt-1"
      >
        <a
          href={null}
          target="_blank"
        >
          <button
            className="mr-0 false
                btn Button Button__medium Button__quaternary "
            data-cy="modal-done-btn"
            disabled={false}
            onClick={[Function]}
          >
            
            <span>
              Ja tak, gem nu
            </span>
            
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddToListModal renders lists from store, first is selected 1`] = `
<div
  className="modal-container "
>
  <div
    className="modal-backdrop"
    onClick={[Function]}
  />
  <div
    className="modal-window add-to-list--modal p-4"
  >
    <div
      className="top d-flex flex-row justify-content-start justify-content-sm-end"
    >
      <i
        className="material-icons material-icons-clear m-3 d-none d-sm-inline-block "
        onClick={[Function]}
        style={
          Object {
            "cursor": "pointer",
          }
        }
      >
        clear
      </i>
      <button
        className="m-3 d-inline-block d-sm-none
            btn Button Button__medium Button__link2 "
        data-cy=""
        disabled={false}
        onClick={[Function]}
      >
        
        <span>
          <i
            className="material-icons material-icons-chevron_left align-middle "
            onClick={[Function]}
          >
            chevron_left
          </i>
          <span
            className="align-middle"
          >
            Tilbage
          </span>
        </span>
        
      </button>
    </div>
    <div
      className="content"
    >
      <h1
        className=" Title Title__title4 Title__title4--transform-uppercase--weight-bold"
      >
        Gem i liste
      </h1>
      <div
        className="row"
      >
        <strong
          className="col-12"
        >
          Hvilken liste vil du gemme i?
        </strong>
      </div>
      <div
        className="row"
      >
        <div
          className="col-6"
        >
          <div
            className="list-overview"
          >
            <div>
              <input
                checked={false}
                id="radio-title1-0"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title1-0"
              >
                title1
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title2-1"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title2-1"
              >
                title2
              </label>
            </div>
            <hr />
            <div>
              <input
                checked={false}
                id="radio-title1-0"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                data-cy="add-to-list-modal-system-lists"
                htmlFor="radio-title1-0"
              >
                title1
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title2-1"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                data-cy="add-to-list-modal-system-lists"
                htmlFor="radio-title2-1"
              >
                title2
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title3-2"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                data-cy="add-to-list-modal-system-lists"
                htmlFor="radio-title3-2"
              >
                title3
              </label>
            </div>
          </div>
          <div
            className="add-list"
          >
            <form
              onSubmit={[Function]}
            >
              <input
                className=""
                name="add-list"
                onChange={[Function]}
                placeholder="Opret ny liste"
                type="text"
                value=""
              />
              <input
                className="add-list--btn text-center d-none"
                onClick={[Function]}
                type="button"
                value="×"
              />
            </form>
          </div>
        </div>
        <div
          className="col-6"
        >
          <WorkItemSmall
            work={
              Object {
                "book": Object {
                  "creator": "some creator1",
                  "pid": "pid1",
                  "taxonomy_description": "some taxonomy_description1",
                  "title": "some title1",
                },
                "description": "some description1",
                "links": Object {
                  "cover": "/cover1",
                },
              }
            }
          />
          <textarea
            className="comment"
            onChange={[Function]}
            placeholder={
              <T
                component="list"
                name="bookCommentModal"
              />
            }
            value=""
          />
        </div>
      </div>
      <div
        className="modal-seperator mt-5 mb-4"
      />
      <div
        className="bottom d-flex flex-row justify-content-end align-items-center pt-1"
      >
        <a
          href={null}
          target="_blank"
        >
          <button
            className="mr-0 false
                btn Button Button__medium Button__quaternary "
            data-cy="modal-done-btn"
            disabled={false}
            onClick={[Function]}
          >
            
            <span>
              Ja tak, gem nu
            </span>
            
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;
